--- a/HOMEstyles.css
+++ b/HOMEstyles.css
@@ -1,60 +1,76 @@
 
-@import url(https://fonts.googleapis.com/css?family=Poppins:100,200,300,400,500,600,700,800,900
-);
+.logo{
+    position: fixed;
+    top:0;
+    right:0;
+    margin: 5px;
+    height: 50px;
+    width: 50px;
+    border: 20px solid hsl(183, 100%, 50%);
+      transition: 0.2s ease;
+}
+.logo:hover{
+    transform: scale(1.05);
+}
 
-*
-{
-    margin: 0;
-    padding: 0;
-    box-sizing: border-box;
-    font-family: 'Poppins', sans-serif;
+.dropdown_options{
+    margin-top: 50px;
+    display: none;
+    height: 300px;
+    width: 75px;
+    position: absolute;
+    top: 25px;
+    right: 0px;
+    background-color: aliceblue;
+      transition: 0.2s ease;
+      
+}
+
+.dropdown_options li{
+    transition: 0.2s ease;
+    text-decoration: none;
+    display: block;
+}
+
+.logo:hover .dropdown_options{
+    display: block;
 }
 
 
-:root
-body
-{
+
+
+
+.container{
+    position: relative;
+    left: 35px;
     display: flex;
-    left: 50px;
-    align-items: center;
-    min-height: 20vh;
-    background-color: #3b3b3b;
+    width: 1200px;
+    justify-content: flex-start;
+    flex-direction: row;
+    margin-top: 160px; 
+    gap: 220px;
+}
 
+.container a{
+    color: inherit;
+    text-decoration: none;
+    display: block;
+}
+
+.AveoScript,
+.Archepatz{
+border: 10px solid cyan;
+height: 500px;
+width: 550px;
+text-align: center;
+transition: 0.3s ease;
 }
 
 
-.aveo_script{
-    position: relative;
-    top: 250px;
-    left: 180px;
-    font-size: 75px;
-    font-family: Impact, Haettenschweiler, 'Arial Narrow Bold', sans-serif;
-    color: rgb(42, 199, 199);
-    background-color: white;
-    transition: 0.3s ease;
-}
-.aveo_script:hover {
-    transform: scale(1.25);
+.AveoScript:hover{
+    transform: scale(1.05);
 }
 
-
-.archepatz{
-    position: relative;
-    top: 250px;
-    left: 560px;
-    font-size: 75px;
-    font-family: Impact, Haettenschweiler, 'Arial Narrow Bold', sans-serif;
-    color: rgb(42, 199, 199);
-    background-color: white;
-    transition: 0.3s ease;
-}
-.archepatz:hover {
-    transform: scale(1.25);
-}
-
-
-.div_link{
-text-decoration: none;
-color: inherit;
-display: block;
+.Archepatz:hover{
+    transform: scale(1.05);
 }
