--- a/AboutCreator/Home/ArchepatzHOMEstyles.css
+++ b/AboutCreator/Home/ArchepatzHOMEstyles.css
@@ -68,14 +68,25 @@ body
 .creator{
     position: relative;
     top: 380px;
-    left: -345px;
+    left: -220px;
     font-family:Impact, Haettenschweiler, 'Arial Narrow Bold', sans-serif;
     font-size: 40px;
-    color: cyan;
-      padding: 60px;
+    color: rgb(13, 214, 214);
+      padding: 20px;
        text-align: center;
     transition: 0.3s ease;
+    background-color: white;
+    border: 2px solid red;
 }
-.creator:hover{
+.a_container:hover .creator{
     transform: scale(1.25);
 }
+.a_container{
+    display: inline-block;
+    overflow: visible;
+    text-decoration: none;
+    color: inherit;
+
+}
+
+
